test/deprecated-keyword/deprecateForwarding.good
deprecateForwarding.chpl:5: syntax error: can't deprecate a forwarding statement
